# yahoo-finance-rs

./: .gitignore  Cargo.toml  build.rs
.github/workflows/: ci.yml
examples/: quote_history.rs  quote_stream.rs  ticker_history.rs
src/: http_client.rs  lib.rs  utils.rs  ws_client.rs
src/http_client/: builder.rs  error.rs  quote_history.rs  transport.rs
src/http_client/quote_history/: request.rs  response.rs
src/ws_client/: abi.proto  builder.rs  error.rs  quote_data.rs  stream.rs
tests/: quote_history.rs
