[package]
name = "yahoo-finance-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
error-stack = "0.1.1"
thiserror = "1.0.31"
reqwest = { version = "0.11.11", features = ["json"] }
log = "0.4"
prost = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
prost-build = "0.8" # 编译 protobuf

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
pretty_env_logger = "0.4"
wiremock = "0.5"
