[package]
name = "yahoo-finance-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
error-stack = "0.1.1"
thiserror = "1.0.31"
reqwest = { version = "0.11.11", features = ["json"] }
log = "0.4"
prost = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.13.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.17.1", features = ["native-tls"]}
futures-util = "0.3.21"
async-prost = "0.4.0"
futures = "0.3.21"
url = "2.2.2"
async-stream = "0.3.3"
decode = "0.1.0"

[build-dependencies]
prost-build = "0.8" # 编译 protobuf

[dev-dependencies]
pretty_env_logger = "0.4"
wiremock = "0.5"
